--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta
+      name="description"
+      content="Your accurate weather forecast for today and the next one week."
+    />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <link rel="stylesheet" href="./index.css" />
-    <script src="../src/index.js" type="module"></script>
-    <title>Weather App</title>
+    <script src="../src/index.js" type="module" defer></script>
+    <title>cloudyGEM Weather App</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
