--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       content="upgrade-insecure-requests"
     />
     <link rel="stylesheet" href="./index.css" />
-    <script src="../src/index.js"  defer></script>
+    <!-- <script src="../src/index.js"  defer></script> -->
     <title>cloudyGEM Weather App</title>
   </head>
   <body>
